Improve GUI.
